--- a/Multi_Class_Animal_Classification.ipynb
+++ b/Multi_Class_Animal_Classification.ipynb
@@ -8,7 +8,7 @@
       },
       "source": [
         "# Create path to images\n",
-        "### Path can be in google drive or local path"
+        "### Can mount gdrive or use local path"
       ]
     },
     {
